--- a/main.css
+++ b/main.css
@@ -4,10 +4,66 @@ body{
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.main {
+  align-content: center;
+}
+
+.demo_window{
+  display: block;
+
+  margin: 10px auto;
+  border: 5px solid black;
+}
+
+.footer {
+  text-align: center;
+  background-color: #330055;
+  height: 0.1vh;
+  padding: 20px 20px;
+  color: #ebeced;
+}
+
+.footer a:link {
+  color: #ebeced;
+}
+
+.contact_view{
+  display: table;
+  margin: 5%;
+}
+
+.contact_link {
+  float: left;
+  height: 5vh;
+  width: 5vh;
+  padding-right: 20px;
+}
+
 .top_nav_desc{
   display: table;
   width: 100%;
   background-color: #330055;
+}
+
+.top_nav_hidden{
+  display: none;
+  padding: 10px 10px;
+  width: 10vh;
+  position: fixed;
+  top: 20vh;
+  transition: top 3s;
+  background-color: #330055;
+  transition: left 0.3s;
+}
+
+.top_nav_hidden div{
+  color: #ebeced;
+  padding: 20px 20px;
+}
+
+.top_nav_hidden div:hover {
+  background-color: #ddd;
+  color: black;
 }
 
 .topnav {
@@ -16,13 +72,14 @@ body{
   overflow: hidden;
   /*background-color: #330055;*/
   height: 0.1vh;
-  padding: 30px 30px;
+  padding: 30px 20px;
+  width: 50%;
 }
 
 .topnav a {
   color: #ebeced;
   text-align: center;
-  padding: 20px 20px;
+  padding: 20px 10px;
   text-decoration: none;
   font-size: 2vh;
 }
@@ -40,7 +97,7 @@ body{
 #slide_description{
   display: table-cell;
   float: left;
-  margin-left: 60vh;
+  width: 40%;
 }
 
 #slide_text {
@@ -99,3 +156,30 @@ body{
     100% { left:100%; }
 }
 
+h1 { color: #7c795d; font-family: 'Trocchi', serif; font-size: 45px; font-weight: normal; line-height: 48px; margin: 5%; margin-top: 5px;}
+h2 { color: #7c795d; font-family: 'Source Sans Pro', sans-serif; font-size: 28px; font-weight: 400; line-height: 32px; margin: 5% 5% 24px; }
+h3 { color: #7c795d; font-family: 'Source Sans Pro', sans-serif; font-size: 20px; font-weight: 400; line-height: 32px; margin: 5% 5% 24px; }
+
+p { color: #4c4a37; font-family: 'Source Sans Pro', sans-serif; font-size: 18px; line-height: 32px; margin: 0 0 4px; text-align: justify; margin: 5%;}
+a { color: #ff9900; text-decoration: none; margin: 1%;}
+a:hover { color: #ffcc66 }
+
+.p_list {line-height: 12px; display:list-item;list-style-type: disc;}
+
+img { 
+    float: right;  
+    margin: 5px; 
+}
+
+.text {
+  width:1000px;
+  margin:0 auto;
+  background: #c0b4c2;
+}
+
+/*.link a:link { color: blue; font-family: 'Trocchi'; font-size: 28px; line-height: 30px; text-align: left; margin: auto; display: list-item;list-style-type: disc; margin-left: 5%; margin-top: 0px;}*/
+.link a:link { color: #3562ab; font-family: 'Raleway',sans-serif; font-size: 25px; font-weight: 600; line-height: 25px; text-align: left; margin: auto; display: list-item;list-style-type: disc; margin-left: 5%; margin-top: 0px;}
+.link a:visited {color: #152e57; font-family: font-family: 'Raleway',sans-serif; font-size: 26px; line-height: 25px; text-align: left; margin: auto; display: list-item;list-style-type: disc; margin-left: 5%; margin-top: 0px;}
+
+
+.entry-content { border-bottom: 3px solid #666; padding: 0 0 15px 0; margin: 5%; }
