--- a/main.css
+++ b/main.css
@@ -156,15 +156,31 @@ body{
     100% { left:100%; }
 }
 
-h1 { color: #7c795d; font-family: 'Trocchi', serif; font-size: 45px; font-weight: normal; line-height: 48px; margin: 5%; margin-top: 5px;}
+/*h1 { color: #7c795d; font-family: 'Trocchi', serif; font-size: 45px; font-weight: normal; line-height: 48px; margin: 5%; margin-top: 5px;}
 h2 { color: #7c795d; font-family: 'Source Sans Pro', sans-serif; font-size: 28px; font-weight: 400; line-height: 32px; margin: 5% 5% 24px; }
 h3 { color: #7c795d; font-family: 'Source Sans Pro', sans-serif; font-size: 20px; font-weight: 400; line-height: 32px; margin: 5% 5% 24px; }
 
 p { color: #4c4a37; font-family: 'Source Sans Pro', sans-serif; font-size: 18px; line-height: 32px; margin: 0 0 4px; text-align: justify; margin: 5%;}
 a { color: #ff9900; text-decoration: none; margin: 1%;}
 a:hover { color: #ffcc66 }
+*/
 
-.p_list {line-height: 12px; display:list-item;list-style-type: disc;}
+h1 { color: black; font-family: 'Enriqueta', arial, serif; line-height: 1.25; font-size: 62px; font-weight: 800; line-height: 72px; margin: 10% 10% 24px; margin-top: 10%; text-align: left; text-transform: uppercase; }
+
+
+h2 { color: black; font-family: 'Raleway',sans-serif; font-size: 30px; font-weight: 800; line-height: 36px; margin: 0 0 24px; margin-left: 20px; width: 80%;text-align: justify; }
+
+
+p { color: #333333; font-family: "Helvetica Neue",Arial,sans-serif; font-size: 16px; font-weight: 300; line-height: 1.5625; margin-bottom: 15px; margin: 2% 10% 2% 2%; text-align: justify;}
+/*p { color: black; font-family: 'Raleway',sans-serif; font-size: 18px; font-weight: 500; line-height: 32px; margin: 2% 10% 2% 2%; text-align: justify;}*/
+
+
+a { color: #c8c8c8; text-decoration: underline; }
+
+
+a:hover { color: #1c1c1c; text-decoration: underline; }
+
+.p_list {line-height: 12px; display:list-item;list-style-type: disc; margin: 1% 1% 1% 5%;}
 
 img { 
     float: right;  
@@ -173,8 +189,9 @@ img {
 
 .text {
   width:1000px;
-  margin:0 auto;
-  background: #c0b4c2;
+  margin-top: 5%;
+  margin-left: 10%;
+  border: 1px solid;
 }
 
 /*.link a:link { color: blue; font-family: 'Trocchi'; font-size: 28px; line-height: 30px; text-align: left; margin: auto; display: list-item;list-style-type: disc; margin-left: 5%; margin-top: 0px;}*/
