--- a/main.css
+++ b/main.css
@@ -169,10 +169,10 @@ a { color: #ff9900; text-decoration: none; margin: 1%;}
 a:hover { color: #ffcc66 }
 */
 
-h1 { color: black; font-family: 'Enriqueta', arial, serif; line-height: 1.25; font-size: 62px; font-weight: 800; line-height: 72px; margin: 10% 10% 24px; margin-top: 10%; text-align: left; text-transform: uppercase; }
+h1 { color: black; font-family: 'Enriqueta', arial, serif; line-height: 1.25; font-size: 3vw; font-weight: 800; line-height: 72px; margin: 10% 10% 24px; margin-top: 10%; text-align: left; text-transform: uppercase; }
 
 
-h2 { color: black; font-family: 'Raleway',sans-serif; font-size: 30px; font-weight: 800; line-height: 36px; margin: 0 0 24px; margin-left: 20px; width: 80%;text-align: justify; }
+h2 { color: black; font-family: 'Raleway',sans-serif; font-size: 1.5vw; font-weight: 800; line-height: 36px; margin: 0 0 24px; margin-left: 20px; width: 80%;text-align: justify; }
 
 
 p { color: #333333; font-family: "Helvetica Neue",Arial,sans-serif; font-size: 16px; font-weight: 300; line-height: 1.5625; margin-bottom: 15px; margin: 2% 10% 2% 2%; text-align: justify;}
