--- a/main.css
+++ b/main.css
@@ -8,6 +8,26 @@ body{
   align-content: center;
 }
 
+#streams {
+  display: table;
+}
+
+#left_stream {
+  display: table-cell;
+  float: left;
+  width: 55%;
+  margin-left: 10%;
+
+}
+
+#right_stream {
+  display: table-cell;
+  float: right;
+  margin-right: 2%;
+  margin-top: 3%;
+  width: 30%;
+}
+
 .demo_window{
   display: block;
   width: 80%;
@@ -29,14 +49,16 @@ body{
 
 .contact_view{
   display: table;
-  margin: 5%;
+  align-content: center;
+  /*margin: 5%;*/
 }
 
 .contact_link {
-  float: left;
-  height: 5vh;
-  width: 5vh;
-  padding-right: 20px;
+  /*float: left;*/
+  height: 2.5vw;
+  width: 2.5vw;
+  /*padding-right: 20px;*/
+  margin: 5%;
 }
 
 .top_nav_desc{
@@ -122,13 +144,14 @@ body{
 }
 
 .banner {
-  margin-left: 15vh;
-  display: table-cell;
+  margin-left: 25vw;
+  display: block;
   float: left;
   max-height: inherit;
   width: auto;
   height: auto;
   margin-bottom: 10px;
+  max-width: 50vw;
 }
 
 #carousel {
@@ -140,11 +163,14 @@ body{
 
 
 .slide_in {
-    position: relative;
+    /*position: relative;*/
+    display: block;
+    float: left;
     -webkit-animation: slide_in 5s forwards;
     -webkit-animation-delay: 0s;
     animation: slide_in 5s forwards;
     animation-delay: 0s;
+    width: 15vw;
 }
 
 
@@ -169,7 +195,7 @@ a { color: #ff9900; text-decoration: none; margin: 1%;}
 a:hover { color: #ffcc66 }
 */
 
-h1 { color: black; font-family: 'Enriqueta', arial, serif; line-height: 1.25; font-size: 2.5vw; font-weight: 800; line-height: 72px; margin: 10% 10% 24px; margin-top: 10%; text-align: left; text-transform: uppercase; }
+h1 { color: black; font-family: 'Enriqueta', arial, serif; line-height: 1.25; font-size: 2vw; font-weight: 1000; line-height: 72px; margin: 5% 5% 14px; margin-top: 1%; text-align: left; text-transform: uppercase; }
 
 
 h2 { color: black; font-family: 'Raleway',sans-serif; font-size: 1.5vw; font-weight: 800; line-height: 36px; margin: 0 0 24px; margin-left: 20px; width: 80%;text-align: justify; }
@@ -192,11 +218,12 @@ img {
 }
 
 .text {
-  width:50%;
+  width:100%;
   margin-top: 5%;
-  margin-left: 10%;
+  margin-bottom: 5%;
+  /*margin-left: 10%;*/
   border: 1px solid;
-  box-shadow: 10px 10px 10px 10px black;
+  box-shadow: 8px 8px 8px 8px black;
 }
 
 /*.link a:link { color: blue; font-family: 'Trocchi'; font-size: 28px; line-height: 30px; text-align: left; margin: auto; display: list-item;list-style-type: disc; margin-left: 5%; margin-top: 0px;}*/
