--- a/main.css
+++ b/main.css
@@ -71,6 +71,15 @@ body{
 
 }
 
+.square img:hover {
+    transform: scale(2);
+        -webkit-transition-duration: 0.5s;
+    -moz-transition-duration: 0.5s;
+    -o-transition-duration: 0.5s;
+    transition-duration: 0.5s;
+     z-index: 3;
+}
+
 .contact_link:hover {
   transform: scale(1.5);
         -webkit-transition-duration: 0.5s;
