--- a/main.css
+++ b/main.css
@@ -2,6 +2,9 @@
 body{
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
+
+background: rgb(242,238,244);
+background: radial-gradient(circle, rgba(242,238,244,1) 0%, rgba(249,249,249,0.42) 100%);
 }
 
 .main {
@@ -90,7 +93,7 @@ body{
 }
 
 .top_nav_desc{
-  display: table;
+  display: block;
   width: 100%;
   background-color: #330055;
 }
@@ -124,13 +127,13 @@ body{
 /*}*/
 
 .topnav {
-  display: table-cell;
+  display: block;
   float: left;
   overflow: hidden;
-  /*background-color: #330055;*/
+  background-color: #330055;
   height: 0.1vh;
   padding: 30px 20px;
-  width: 50%;
+  width: 100%;
 }
 
 .topnav a {
@@ -168,8 +171,10 @@ body{
 
 .top_bar {
   display: table;
-  background: rgb(51,0,85);
-  background: linear-gradient(0deg, rgba(51,0,85,1) 0%, rgba(159,112,183,1) 100%);
+  background: rgb(131,58,180);
+  background: linear-gradient(351deg, rgba(131,58,180,1) 0%, rgba(164,29,253,1) 50%, rgba(69,73,252,1) 100%);
+  /*background: rgb(51,0,85);*/
+  /*background: linear-gradient(0deg, rgba(51,0,85,1) 0%, rgba(159,112,183,1) 100%);*/
   max-height: 36vh;
   width: 100%;
 }
@@ -254,7 +259,10 @@ img {
   margin-bottom: 5%;
   /*margin-left: 10%;*/
   border: 1px solid;
-  box-shadow: 1px 1px 1px 1px black;
+  border-left: 3px solid;
+  border-left-color: #9d69b5;
+  border-color: #dcd3e0 ;
+  /*box-shadow: 1px 1px 1px 1px #e0ddd3;*/
 }
 
 
