--- a/main.css
+++ b/main.css
@@ -56,6 +56,13 @@ background: radial-gradient(circle, rgba(242,238,244,1) 0%, rgba(249,249,249,0.4
   /*margin: 5%;*/
 }
 
+.contact_view a{
+  display: table-cell;
+  float: left;
+  margin-left: 5%;
+  padding: 2%;
+}
+
 .contact_link {
   /*float: left;*/
   height: 2.5vw;
