--- a/main.css
+++ b/main.css
@@ -39,11 +39,20 @@ background: radial-gradient(circle, rgba(242,238,244,1) 0%, rgba(249,249,249,0.4
   width: 30%;
 }
 
+.demos_frame{
+  display: table;
+  align-content: center;
+  align-items: center;
+}
+
 .demo_window{
   display: table-cell;
-  width: 80%;
-  margin: 10px auto;
-  border: 5px solid black;
+  margin: 1%;
+  margin-left: 5%;
+  margin-bottom: 1%;
+  float: left;
+  border: 2px solid grey;
+  box-shadow: 2px 2px grey;
 }
 
 .footer{
@@ -106,6 +115,8 @@ background: radial-gradient(circle, rgba(242,238,244,1) 0%, rgba(249,249,249,0.4
     transition-duration: 0.5s;
      z-index: 3;
 }
+
+
 
 
 /*.text:active {*/
