--- a/main.css
+++ b/main.css
@@ -3,12 +3,79 @@ body{
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
 
-background: rgb(242,238,244);
-background: radial-gradient(circle, rgba(242,238,244,1) 0%, rgba(249,249,249,0.42) 100%);
+  background: rgb(242,238,244);
+  background: radial-gradient(circle, rgba(242,238,244,1) 0%, rgba(249,249,249,0.42) 100%);
 }
 
 .main {
   align-content: center;
+}
+
+#demos_grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  /*grid-template-rows: 1fr 1fr;*/
+  gap: 10px 10px ;
+  justify-items: center;
+  background: #ebf0ee;
+  box-shadow: 0 0 15px 15px #ebf0ee;
+  margin: 2%;
+  
+}
+
+.demo_window{
+  border: 2px solid grey;
+  box-shadow: 6px 6px 6px #c2cfca;
+  margin: 4%;
+}
+
+.demo_window:hover{
+    transform: scale(1.1);
+    -webkit-transition-duration: 0.5s;
+    -moz-transition-duration: 0.5s;
+    -o-transition-duration: 0.5s;
+    transition-duration: 0.5s;
+     z-index: 3;
+}
+
+#main_grid{
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  /*grid-template-rows: 1fr 1fr;*/
+  gap: 10px 14px ;
+  margin-left: 10%;
+  margin-right: 5%;
+  margin-top: 2%;
+  margin-bottom: 2%;
+  
+  grid-template-areas:
+    ". contact_view"
+    ". ."
+}
+
+#main_grid .cell {
+  border: 1px solid;
+  border-left: 4px solid;
+  /*border-bottom: 1px solid;*/
+  border-left-color: #9d69b5;
+  border-color: #dcd3e0 ;
+}
+
+/*#main_grid{*/
+/*  border: 2px solid;*/
+/*  border-left: 3px solid;*/
+/*  border-bottom: 1px solid;*/
+/*  border-left-color: #9d69b5;*/
+/*  border-color: #dcd3e0 ;*/
+/*  /*grid-column: span 2;*/*/
+/*  /*transition-duration: 0.5s;*/*/
+/*}*/
+
+#main_grid *:after {
+  content:attr(class);
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 #streams {
@@ -39,28 +106,20 @@ background: radial-gradient(circle, rgba(242,238,244,1) 0%, rgba(249,249,249,0.4
   width: 30%;
 }
 
-.demos_frame{
-  display: table;
-  align-content: center;
-  align-items: center;
-}
+/*.demos_frame{*/
+/*  display: table;*/
+/*  align-content: center;*/
+/*  align-items: center;*/
+/*}*/
 
-.demo_window{
-  display: table-cell;
-  margin: 1%;
-  margin-left: 5%;
-  margin-bottom: 1%;
-  float: left;
-  border: 2px solid grey;
-  box-shadow: 2px 2px grey;
-}
+
 
 .footer{
   display: block;
   text-align: center;
   background-color: #330055;
   height: 0.5vh;
-  /*padding: 20px 20px;*/
+  padding: 20px 20px;
   color: #ebeced;
   margin-bottom: 0;
   width: 100%;
@@ -193,6 +252,7 @@ background: radial-gradient(circle, rgba(242,238,244,1) 0%, rgba(249,249,249,0.4
   display: table;
   background: rgb(131,58,180);
   background: linear-gradient(351deg, rgba(131,58,180,1) 0%, rgba(164,29,253,1) 50%, rgba(69,73,252,1) 100%);
+  
   width: 100%;
   height: 100%;
   margin-left: 0;
@@ -268,11 +328,12 @@ h1 {
   line-height: 50px;
   margin: 15px 15px 14px;
   margin-top: 1%;
+  margin-left: 3%;
   text-align: left;
   text-transform: uppercase;
 }
 h2 { color: black; font-family: 'Raleway',sans-serif; font-size: 1.5vw; font-weight: 800; line-height: 2vh; margin: 0 0 2%; margin-left: 20px; width: 80%;text-align: justify; }
-p { color: #333333; font-family: "Helvetica Neue",Arial,sans-serif; font-size: 16px; font-weight: 300; line-height: 1.5625; margin-bottom: 15px; margin: 2% 10% 2% 2%; text-align: justify;}
+p { color: #333333; font-family: "Helvetica Neue",Arial,sans-serif; font-size: 16px; font-weight: 300; line-height: 1.5625; margin-bottom: 15px; margin: 2% 2% 2% 2%; text-align: justify;}
 a { color: #c8c8c8; text-decoration: underline; }
 a:hover { color: #1c1c1c; text-decoration: underline; }
 
@@ -280,12 +341,12 @@ a:hover { color: #1c1c1c; text-decoration: underline; }
 
 .text {
   width:100%;
-  margin-top: 5%;
+  /*margin-top: 5%;*/
   margin-bottom: 2%;
-  border: 1px solid;
-  border-left: 3px solid;
-  border-left-color: #9d69b5;
-  border-color: #dcd3e0 ;
+  /*border: 1px solid;*/
+  /*border-left: 3px solid;*/
+  /*border-left-color: #9d69b5;*/
+  /*border-color: #dcd3e0 ;*/
 }
 
 .text p.p_list {
