--- a/main.css
+++ b/main.css
@@ -27,6 +27,7 @@ body{
   border: 2px solid grey;
   box-shadow: 6px 6px 6px #c2cfca;
   margin: 4%;
+  width: 90%;
 }
 
 .demo_window:hover{
@@ -40,7 +41,7 @@ body{
 
 #main_grid{
   display: grid;
-  grid-template-columns: 2fr 1fr;
+  grid-template-columns: 60vw 30vw;
   /*grid-template-rows: 1fr 1fr;*/
   gap: 10px 14px ;
   margin-left: 10%;
@@ -201,10 +202,10 @@ body{
 
 .topnav {
   display: block;
-  float: left;
+  /*float: left;*/
   background-color: #330055;
   /*height: 80%;*/
-  padding: 1% 1px 15px 1px;
+  padding: 1% 1px 1px 1px;
   width: 100%;
 }
 
@@ -252,7 +253,6 @@ body{
   display: table;
   background: rgb(131,58,180);
   background: linear-gradient(351deg, rgba(131,58,180,1) 0%, rgba(164,29,253,1) 50%, rgba(69,73,252,1) 100%);
-  
   width: 100%;
   height: 100%;
   margin-left: 0;
@@ -323,12 +323,13 @@ body{
 h1 {
   color: black;
   font-family: 'Enriqueta', arial, serif;
-  line-height: 1.25; font-size: 2vw;
+  line-height: 1.25;
+  font-size: 1.8vw;
   font-weight: 1000;
   line-height: 50px;
   margin: 15px 15px 14px;
   margin-top: 1%;
-  margin-left: 3%;
+  margin-left: 2%;
   text-align: left;
   text-transform: uppercase;
 }
