--- a/main.css
+++ b/main.css
@@ -61,7 +61,7 @@ body{
   
   background: #4B1F9E;
   margin: 3%;
-  box-shadow: 0 0 3vw 3vw #4B1F9E;
+  box-shadow: 0 0 1.5vw 2.5vw #4B1F9E;
 
 }
 
@@ -129,14 +129,32 @@ body{
 /*   z-index: 3;*/
 /*}*/
 
-.simple_grid .cell,
-.main_grid .cell {
-  /*border: 1px solid;*/
-  border-bottom: 4px solid;
-  border-bottom-color: #330055;
-
-  /*border-color: #dcd3e0 ;*/
+.bottom_border {
+    background: /* gradient can be an image */
+    linear-gradient(
+      to left, 
+      rgba(4,13,25,1) 0%, rgba(51,0,84,1) 50%, rgba(4,13,25,1) 100%
+    )
+    left 
+    bottom
+    no-repeat; 
+  background-size:100% 5px ;/* if linear-gradient, we need to resize it */
+  
 }
+
+/*.simple_grid .cell,*/
+/*.main_grid .cell {*/
+/*    background: /* gradient can be an image */*/
+/*    linear-gradient(*/
+/*      to left, */
+/*      rgba(4,13,25,1) 0%, rgba(51,0,84,1) 50%, rgba(4,13,25,1) 100%*/
+/*    )*/
+/*    left */
+/*    bottom*/
+/*    no-repeat; */
+/*  background-size:100% 5px ;/* if linear-gradient, we need to resize it */*/
+/*}*/
+                             
 
 /*##########################################################*/
 .footer{
@@ -227,7 +245,7 @@ body{
   width: 100%;
 }
 
-h1, h2, p {
+h1, h2, p, li {
   color: #ebeced;
 }
 
@@ -236,7 +254,7 @@ h1 {
   color: #ebeced;
   /*font-family: 'Enriqueta', arial, serif;*/
   line-height: 1.25;
-  font-size: 1.8vw;
+  font-size: 2.5em;
   font-weight: 1000;
   line-height: 50px;
   margin: 15px 15px 14px;
@@ -249,7 +267,8 @@ h1 {
 h2 {
   /*color: black;*/
   /*font-family: 'Raleway',sans-serif;*/
-  font-size: 1.5vw; font-weight: 800;
+  font-size: 2em;
+  font-weight: 800;
   line-height: 2vh;
   margin: 0 0 2%;
   margin-left: 20px;
@@ -257,14 +276,14 @@ h2 {
   text-align: justify;
 }
 
-p {
+p, li {
   /*color: #333333;*/
   /*font-family: "Helvetica Neue",Arial,sans-serif;*/
   /*font-size: 18px;*/
   font-size: 1.5em;
   font-weight: 300;
-  line-height: 1.5625;
-  margin-bottom: 15px;
+  line-height: 1.3;
+  margin-bottom: 10px;
   margin: 2% 5% 2% 5%;
   text-align: justify;
 }
@@ -282,7 +301,7 @@ a:hover {
   margin-bottom: 2%;
 }
 
-.text p.p_list {
+.text p.p_list li ul{
   line-height: 12px;
   display:list-item;
   list-style-type: disc;
